cmss/main/default/objects/ClientZone__c/ClientZone__c.object-meta.xml
<CustomObject>
    <description>An object specifying access of a client to his or her client zone</description>
    <label>Client Zone</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Client Zone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Zones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>