cmss/main/default/objects/ClientZone__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Reference to client that is owner of the client zone</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Zones</relationshipLabel>
    <relationshipName>ClientZones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>