cmss/main/default/objects/ClientZone__c/fields/AgreementDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementDate__c</fullName>
    <description>Date when the agreement was made</description>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>