cmss/main/default/objects/ClientZone__c/fields/AnnexNumber__c.field-meta.xml
<CustomField>
    <fullName>AnnexNumber__c</fullName>
    <description>Number of the last contract annex</description>
    <label>Annex Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>