cmss/main/default/objects/ClientZone__c/fields/CancelationNotificationSentDate__c.field-meta.xml
<CustomField>
    <fullName>CancelationNotificationSentDate__c</fullName>
    <label>Cancelation Notification Sent Date</label>
    <type>DateTime</type>
</CustomField>