cmss/main/default/objects/ClientZone__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <description>Date when the client zone was cancelled</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>