cmss/main/default/objects/ClientZone__c/fields/ClosedBy__c.field-meta.xml
<CustomField>
    <fullName>ClosedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that closed the contract about the client zone</description>
    <label>Closed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientZones</relationshipName>
    <type>Lookup</type>
</CustomField>