cmss/main/default/objects/ClientZone__c/fields/ConditionsAcceptationDate__c.field-meta.xml
<CustomField>
    <fullName>ConditionsAcceptationDate__c</fullName>
    <label>Conditions Acceptation Date</label>
    <type>DateTime</type>
</CustomField>