cmss/main/default/objects/ClientZone__c/fields/ConditionsAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>ConditionsAcceptedDate__c</fullName>
    <label>Conditions Accepted Date</label>
    <type>DateTime</type>
</CustomField>