cmss/main/default/objects/ClientZone__c/fields/ConditionsValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ConditionsValidFrom__c</fullName>
    <label>Conditions Valid From</label>
    <type>DateTime</type>
</CustomField>