cmss/main/default/objects/ClientZone__c/fields/ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>ContractStatus__c</fullName>
    <description>Status of the contract about the client zone: 0-generated, 1-signed, 2-invalid</description>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Generated</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Signed</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Invalid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>