cmss/main/default/objects/ClientZone__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the client that owns the client zone</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>