cmss/main/default/objects/ClientZone__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Id of the client zone used by external systems</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>