cmss/main/default/objects/ClientZone__c/fields/IsAccessRestricted__c.field-meta.xml
<CustomField>
    <fullName>IsAccessRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information where the access to the client zone is somehow restricted.</description>
    <label>Access Restricted</label>
    <type>Checkbox</type>
</CustomField>