cmss/main/default/objects/ClientZone__c/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <label>Lead ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>