cmss/main/default/objects/ClientZone__c/fields/ModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ModifiedDate__c</fullName>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>