cmss/main/default/objects/ClientZone__c/fields/ModifiedOn__c.field-meta.xml
<CustomField>
    <fullName>ModifiedOn__c</fullName>
    <label>Modified On</label>
    <type>DateTime</type>
</CustomField>