cmss/main/default/objects/ClientZone__c/fields/NumberOfAnnexes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAnnexes__c</fullName>
    <description>Number of annexes related to the contract about the client zone</description>
    <label>Number of Annexes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>