cmss/main/default/objects/ClientZone__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Client zone access role</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Limited</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Self-registration</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Self-registration Verified Contacts</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Pre-verified User</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Verified User</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>User Agreement</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Full Access</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>No Access</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>