cmss/main/default/objects/ClientZone__c/fields/RomeAnnexes__c.field-meta.xml
<CustomField>
    <fullName>RomeAnnexes__c</fullName>
    <label>Rome Annexes</label>
    <length>10</length>
    <type>Text</type>
</CustomField>