cmss/main/default/objects/ClientZone__c/fields/SignatureDate__c.field-meta.xml
<CustomField>
    <fullName>SignatureDate__c</fullName>
    <description>Date when cmss agent and client signed the contract about the client zone</description>
    <label>Signature Date</label>
    <type>Date</type>
</CustomField>