cmss/main/default/objects/ClientZone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the client zone - active/inactive</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>