cmss/main/default/objects/ClientZone__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Username of the client for signing in to his client zone</description>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>