cmss/main/default/objects/ClientZone__c/fields/UsernameHash__c.field-meta.xml
<CustomField>
    <fullName>UsernameHash__c</fullName>
    <description>SHA256 hash of Username__c value. Used to ensure uniqeness of username as it is encrypted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Username Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>