cmss/main/default/objects/ClientZone__c/fields/VerificationPhone__c.field-meta.xml
<CustomField>
    <fullName>VerificationPhone__c</fullName>
    <description>Phone of the client used for confirmation when logging to his client zone</description>
    <label>Verification Phone</label>
    <type>Phone</type>
</CustomField>