cmss/main/default/objects/ClientZone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Username__c</columns>
    <columns>VerificationPhone__c</columns>
    <columns>Email__c</columns>
    <columns>Role__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Status__c</columns>
    <columns>ContractStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny</label>
</ListView>