cmss/main/default/objects/ClientZone__c/listViews/AllActive.listView-meta.xml
<ListView>
    <fullName>AllActive</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Username__c</columns>
    <columns>VerificationPhone__c</columns>
    <columns>Email__c</columns>
    <columns>Role__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Status__c</columns>
    <columns>ContractStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Aktivní KZ</label>
</ListView>