cmss/main/default/objects/ClientZone__c/listViews/NotSignedByAgent.listView-meta.xml
<ListView>
    <fullName>NotSignedByAgent</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Username__c</columns>
    <columns>VerificationPhone__c</columns>
    <columns>Email__c</columns>
    <columns>Role__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>ContractStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ContractStatus__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SignatureDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Nepodepsané KZ - OZ</label>
</ListView>